fixed spacing on home page still fighting with tabs

--- a/css/index.css
+++ b/css/index.css
@@ -27,31 +27,40 @@
   font-weight: bold;
   color: #FFFFFF;
   position: absolute;
-  bottom: 200px;
+  bottom: 100px;
 }
+
+  .no-gutter > [class*='col-'] {
+    padding-right:0;
+    padding-left:0;
+}
+
 .lorem-img {
   display: flex;
   margin-top: 40px;
 }
 .lorem-img h2 {
   font-weight: bold;
-  font-size: 22px;
+  font-size: 18px;
   color: #222222;
 }
 .lorem-img p {
   margin-top: 10px;
+  margin-left: 50px;
 }
 .lorem-img .button {
   margin-top: 10px;
   width: 30%;
 }
+.architect {
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
 .architect .img-container {
-  width: 50%;
-  margin-left: 0;
+margin-bottom: 20px;
 }
 .futuristic .img-container {
-  width: 50%;
-  margin-right: 0px;
+justify-content: left;
 }
 .recent-projects h2 {
   font-weight: bold;
@@ -59,11 +68,14 @@
   color: #222222;
   margin: 30px 0;
 }
+
 .recent-projects .project {
   margin-bottom: 40px;
+
 }
 .project-header {
   position: relative;
+
 }
 .project-header img {
   width: 100%;
@@ -71,9 +83,10 @@
 .project-header .overlay {
   position: absolute;
   bottom: 0;
+  left: 0;
   background: #D8D8D8;
   padding: 20px 20px;
-  z-index: 2;
+  z-index: 1;
   letter-spacing: 5px;
 }
 .project-header .project-overlay {
@@ -121,7 +134,7 @@ body {
   font-size: 16px;
 }
 .container {
-  width: 855px;
+  width: 1024;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .button {
